[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/monster/garl idle.png" type="Texture" id=1]
[ext_resource path="res://Monster.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 137, 69 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.4228
height = 43.5994

[sub_resource type="CapsuleShape2D" id=4]
radius = 18.333
height = 45.8296

[sub_resource type="CircleShape2D" id=5]
radius = 189.667

[sub_resource type="CapsuleShape2D" id=6]
radius = 10.633
height = 144.862

[sub_resource type="CircleShape2D" id=7]
radius = 22.3747

[node name="Garl" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2147483649
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -27 )
frames = SubResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.371547, -18.2962 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="TimerTalkCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -18 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="AreaAggro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAggro"]
position = Vector2( 0, -18 )
shape = SubResource( 5 )

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2( 0, -16 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="AreaWeapon" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaWeapon"]
position = Vector2( -67.6508, -18.107 )
shape = SubResource( 7 )

[node name="TimerAttack" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="AreaAggro" to="." method="_on_AreaAggro_area_entered"]
[connection signal="area_exited" from="AreaAggro" to="." method="_on_AreaAggro_area_exited"]
[connection signal="area_entered" from="AreaAttack" to="." method="_on_AreaAttack_area_entered"]
[connection signal="area_exited" from="AreaAttack" to="." method="_on_AreaAttack_area_exited"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
